# square_n__sum_in_python

./: .gitignore  Dockerfile  Makefile  Pipfile  compose.yml  pyproject.toml  sonar-project.properties
.github/workflows/: cicd.yml
docs/: CONTRIBUTING.md  NOTES.md  README.md
modules/: square_number_sum.py
pacts/: square_n__sum_in_python_client-square_n__sum_in_python_app.json
tests/api/: test_dummy_consumer.py
tests/unit/: test_square_number_sum.py
